--- a/en/menu.html
+++ b/en/menu.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Projet Raph & Khalil</title>
-    <link rel="stylesheet" href="style/index.css" />
+    <link rel="stylesheet" href="../style/index.css" />
   </head>
 
   <body>
@@ -20,7 +20,7 @@
           </div>
     
           <a class="w-auto flex justify-center items-center" href="./index.html">
-            <img src="img/logo.png" class="w-28 lg:max-w-48">
+            <img src="../img/logo.png" class="w-28 lg:max-w-48">
           </a>
           <div class="w-1/2 justify-end hidden lg:flex lg:w-1/3">
             <div class="flex justify-center items-center space-x-3">
@@ -33,8 +33,8 @@
               <a class="w-8 h-8 bg-primary-dark rounded flex items-center justify-center fill-black" href="https://www.linkedin.com/company/dbtpartners/about/?viewAsMember=true" target="_blank">
                 <svg class="h-6" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 448 512"><path d="M100.3 448H7.4V148.9h92.9zM53.8 108.1C24.1 108.1 0 83.5 0 53.8a53.8 53.8 0 0 1 107.6 0c0 29.7-24.1 54.3-53.8 54.3zM447.9 448h-92.7V302.4c0-34.7-.7-79.2-48.3-79.2-48.3 0-55.7 37.7-55.7 76.7V448h-92.8V148.9h89.1v40.8h1.3c12.4-23.5 42.7-48.3 87.9-48.3 94 0 111.3 61.9 111.3 142.3V448z"></path></svg>
               </a>
-              <a class="w-8 h-8 bg-primary-dark rounded flex items-center justify-center fill-black" href="./en/menu.html" target="_blank">
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="h-6" viewBox="0 0 36 36" aria-hidden="true" role="img" class="iconify iconify--twemoji" preserveAspectRatio="xMidYMid meet"><path fill="#00247D" d="M0 9.059V13h5.628zM4.664 31H13v-5.837zM23 25.164V31h8.335zM0 23v3.941L5.63 23zM31.337 5H23v5.837zM36 26.942V23h-5.631zM36 13V9.059L30.371 13zM13 5H4.664L13 10.837z"/><path fill="#CF1B2B" d="M25.14 23l9.712 6.801a3.977 3.977 0 0 0 .99-1.749L28.627 23H25.14zM13 23h-2.141l-9.711 6.8c.521.53 1.189.909 1.938 1.085L13 23.943V23zm10-10h2.141l9.711-6.8a3.988 3.988 0 0 0-1.937-1.085L23 12.057V13zm-12.141 0L1.148 6.2a3.994 3.994 0 0 0-.991 1.749L7.372 13h3.487z"/><path fill="#EEE" d="M36 21H21v10h2v-5.836L31.335 31H32a3.99 3.99 0 0 0 2.852-1.199L25.14 23h3.487l7.215 5.052c.093-.337.158-.686.158-1.052v-.058L30.369 23H36v-2zM0 21v2h5.63L0 26.941V27c0 1.091.439 2.078 1.148 2.8l9.711-6.8H13v.943l-9.914 6.941c.294.07.598.116.914.116h.664L13 25.163V31h2V21H0zM36 9a3.983 3.983 0 0 0-1.148-2.8L25.141 13H23v-.943l9.915-6.942A4.001 4.001 0 0 0 32 5h-.663L23 10.837V5h-2v10h15v-2h-5.629L36 9.059V9zM13 5v5.837L4.664 5H4a3.985 3.985 0 0 0-2.852 1.2l9.711 6.8H7.372L.157 7.949A3.968 3.968 0 0 0 0 9v.059L5.628 13H0v2h15V5h-2z"/><path fill="#CF1B2B" d="M21 15V5h-6v10H0v6h15v10h6V21h15v-6z"/></svg>
+              <a class="w-8 h-8 bg-primary-dark rounded flex items-center justify-center fill-black" href="../menu.html" target="_blank">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="h-6" viewBox="0 0 36 36" aria-hidden="true" role="img" class="iconify iconify--twemoji" preserveAspectRatio="xMidYMid meet"><path fill="#ED2939" d="M36 27a4 4 0 0 1-4 4h-8V5h8a4 4 0 0 1 4 4v18z"/><path fill="#002495" d="M4 5a4 4 0 0 0-4 4v18a4 4 0 0 0 4 4h8V5H4z"/><path fill="#EEE" d="M12 5h12v26H12z"/></svg>
               </a>
             </div>
           </div>
@@ -104,7 +104,7 @@
 
         <div class="grid grid-cols-1 gap-2 mt-8 lg:grid-cols-3 lg:gap-8 lg:grid">
           <div class="product flex flex-row-reverse lg:grid pb-2 border-b-2 border-solid border-gray lg:border-0" data-type="hot">
-            <img class="img-cover product-img rounded-lg overflow-hidden aspect-square max-w-24 lg:max-w-full lg:aspect-auto" src="img/cafe.png" alt="coffee">
+            <img class="img-cover product-img rounded-lg overflow-hidden aspect-square max-w-24 lg:max-w-full lg:aspect-auto" src="../img/cafe.png" alt="coffee">
             <div>
               <div class="flex items-center justify-between lg:mt-5">
                 <p class="product-title text-lg font-medium">Expresso Italien</p>
@@ -125,7 +125,7 @@
           </div>
 
           <div class="product flex flex-row-reverse lg:grid pb-2 border-b-2 border-solid border-gray lg:border-0" data-type="cold">
-            <img class="img-cover product-img rounded-lg overflow-hidden aspect-square max-w-24 lg:max-w-full lg:aspect-auto" src="img/cafe.png" alt="coffee">
+            <img class="img-cover product-img rounded-lg overflow-hidden aspect-square max-w-24 lg:max-w-full lg:aspect-auto" src="../img/cafe.png" alt="coffee">
             <div>
               <div class="flex items-center justify-between lg:mt-5">
                 <p class="product-title text-lg font-medium">Expresso Français</p>
@@ -146,7 +146,7 @@
           </div>
 
           <div class="product flex flex-row-reverse lg:grid pb-2 border-b-2 border-solid border-gray lg:border-0" data-type="hot">
-            <img class="img-cover product-img rounded-lg overflow-hidden aspect-square max-w-24 lg:max-w-full lg:aspect-auto" src="img/banner.png" alt="coffee">
+            <img class="img-cover product-img rounded-lg overflow-hidden aspect-square max-w-24 lg:max-w-full lg:aspect-auto" src="../img/banner.png" alt="coffee">
             <div>
               <div class="flex items-center justify-between lg:mt-5">
                 <p class="product-title text-lg font-medium">Expresso Anglais</p>
@@ -176,7 +176,7 @@
             <path d="M6 18L18 6M6 6L18 18" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
           </svg>
         </div>
-        <img class="product-img img h-56 w-full img-cover h-full" src="img/cafe.png" alt="coffee">
+        <img class="product-img img h-56 w-full img-cover h-full" src="../img/cafe.png" alt="coffee">
         <div class="w-container mx-auto">
           <div class="flex items-center justify-between mt-5">
             <p class="product-title text-lg font-medium">Expresso Italien</p>
