--- a/lang/en/menu.html
+++ b/lang/en/menu.html
@@ -33,7 +33,7 @@
               <a class="w-8 h-8 bg-primary-dark rounded flex items-center justify-center fill-black" href="https://www.linkedin.com/company/dbtpartners/about/?viewAsMember=true" target="_blank">
                 <svg class="h-6" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 448 512"><path d="M100.3 448H7.4V148.9h92.9zM53.8 108.1C24.1 108.1 0 83.5 0 53.8a53.8 53.8 0 0 1 107.6 0c0 29.7-24.1 54.3-53.8 54.3zM447.9 448h-92.7V302.4c0-34.7-.7-79.2-48.3-79.2-48.3 0-55.7 37.7-55.7 76.7V448h-92.8V148.9h89.1v40.8h1.3c12.4-23.5 42.7-48.3 87.9-48.3 94 0 111.3 61.9 111.3 142.3V448z"></path></svg>
               </a>
-              <a class="w-8 h-8 bg-primary-dark rounded flex items-center justify-center fill-black" href="../menu.html" target="_blank">
+              <a class="w-8 h-8 bg-primary-dark rounded flex items-center justify-center fill-black" href="../../menu.html" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="h-6" viewBox="0 0 36 36" aria-hidden="true" role="img" class="iconify iconify--twemoji" preserveAspectRatio="xMidYMid meet"><path fill="#ED2939" d="M36 27a4 4 0 0 1-4 4h-8V5h8a4 4 0 0 1 4 4v18z"/><path fill="#002495" d="M4 5a4 4 0 0 0-4 4v18a4 4 0 0 0 4 4h8V5H4z"/><path fill="#EEE" d="M12 5h12v26H12z"/></svg>
               </a>
             </div>
@@ -215,6 +215,6 @@
         </div>
       </div>
     </footer>
-    <script src="js/animate.js"></script>
+    <script src="../../js/animate.js"></script>
   </body>
 </html>
