--- a/lang/es/index.html
+++ b/lang/es/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Projet Raph & Khalil</title>
-    <link rel="stylesheet" href="style/index.css" />
+    <link rel="stylesheet" href="../style/index.css" />
   </head>
 
   <body>
@@ -20,7 +20,7 @@
           </div>
     
           <a class="w-auto flex justify-center items-center" href="./index.html">
-            <img src="img/logo.png" class="w-28 lg:max-w-48">
+            <img src="../../img/logo.png" class="w-28 lg:max-w-48">
           </a>
           <div class="w-1/2 justify-end hidden lg:flex lg:w-1/3">
             <div class="flex justify-center items-center space-x-3">
@@ -33,10 +33,7 @@
               <a class="w-8 h-8 bg-primary-dark rounded flex items-center justify-center fill-black" href="https://www.linkedin.com/company/dbtpartners/about/?viewAsMember=true" target="_blank">
                 <svg class="h-6" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 448 512"><path d="M100.3 448H7.4V148.9h92.9zM53.8 108.1C24.1 108.1 0 83.5 0 53.8a53.8 53.8 0 0 1 107.6 0c0 29.7-24.1 54.3-53.8 54.3zM447.9 448h-92.7V302.4c0-34.7-.7-79.2-48.3-79.2-48.3 0-55.7 37.7-55.7 76.7V448h-92.8V148.9h89.1v40.8h1.3c12.4-23.5 42.7-48.3 87.9-48.3 94 0 111.3 61.9 111.3 142.3V448z"></path></svg>
               </a>
-              <a class="w-8 h-8 bg-primary-dark rounded flex items-center justify-center fill-black" href="./lang/en/index.html" target="_blank">
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="h-6" viewBox="0 0 36 36" aria-hidden="true" role="img" class="iconify iconify--twemoji" preserveAspectRatio="xMidYMid meet"><path fill="#00247D" d="M0 9.059V13h5.628zM4.664 31H13v-5.837zM23 25.164V31h8.335zM0 23v3.941L5.63 23zM31.337 5H23v5.837zM36 26.942V23h-5.631zM36 13V9.059L30.371 13zM13 5H4.664L13 10.837z"/><path fill="#CF1B2B" d="M25.14 23l9.712 6.801a3.977 3.977 0 0 0 .99-1.749L28.627 23H25.14zM13 23h-2.141l-9.711 6.8c.521.53 1.189.909 1.938 1.085L13 23.943V23zm10-10h2.141l9.711-6.8a3.988 3.988 0 0 0-1.937-1.085L23 12.057V13zm-12.141 0L1.148 6.2a3.994 3.994 0 0 0-.991 1.749L7.372 13h3.487z"/><path fill="#EEE" d="M36 21H21v10h2v-5.836L31.335 31H32a3.99 3.99 0 0 0 2.852-1.199L25.14 23h3.487l7.215 5.052c.093-.337.158-.686.158-1.052v-.058L30.369 23H36v-2zM0 21v2h5.63L0 26.941V27c0 1.091.439 2.078 1.148 2.8l9.711-6.8H13v.943l-9.914 6.941c.294.07.598.116.914.116h.664L13 25.163V31h2V21H0zM36 9a3.983 3.983 0 0 0-1.148-2.8L25.141 13H23v-.943l9.915-6.942A4.001 4.001 0 0 0 32 5h-.663L23 10.837V5h-2v10h15v-2h-5.629L36 9.059V9zM13 5v5.837L4.664 5H4a3.985 3.985 0 0 0-2.852 1.2l9.711 6.8H7.372L.157 7.949A3.968 3.968 0 0 0 0 9v.059L5.628 13H0v2h15V5h-2z"/><path fill="#CF1B2B" d="M21 15V5h-6v10H0v6h15v10h6V21h15v-6z"/></svg>
-              </a>
-              <a class="w-8 h-8 bg-primary-dark rounded flex items-center justify-center fill-black" href="./lang/en/index.html" target="_blank">
+              <a class="w-8 h-8 bg-primary-dark rounded flex items-center justify-center fill-black" href="../../index.html" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="h-6" viewBox="0 0 36 36" aria-hidden="true" role="img" class="iconify iconify--twemoji" preserveAspectRatio="xMidYMid meet"><path fill="#ED2939" d="M36 27a4 4 0 0 1-4 4h-8V5h8a4 4 0 0 1 4 4v18z"/><path fill="#002495" d="M4 5a4 4 0 0 0-4 4v18a4 4 0 0 0 4 4h8V5H4z"/><path fill="#EEE" d="M12 5h12v26H12z"/></svg>
               </a>
             </div>
@@ -73,28 +70,28 @@
                 <span>La Carte</span>
               </a>
             </li>
-            <!-- <li>
+            <li>
               <a class="h-10 gray-light py-2 space-x-1.5 flex items-center justify-center" href="./index.html#adresse">
                 <svg width="18" height="24" viewBox="0 0 18 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M8.57147 0C13.3018 0 17.1429 3.84109 17.1429 8.57142C17.1429 12.932 14.5308 18.6407 12.0332 21.6696C11.3464 22.5022 10.6629 23.1386 10.0457 23.52C9.51644 23.8468 9.01395 24 8.57145 24C8.12894 24 7.62645 23.8468 7.09716 23.52C6.48002 23.1386 5.79645 22.5022 5.10966 21.6696C2.61216 18.6407 0 12.9323 0 8.57142C0 3.84109 3.84115 0 8.57147 0ZM8.57147 4.28571C6.20576 4.28571 4.28576 6.20571 4.28576 8.57142C4.28576 10.9371 6.20576 12.8571 8.57147 12.8571C10.9372 12.8571 12.8572 10.9371 12.8572 8.57142C12.8572 6.20571 10.9372 4.28571 8.57147 4.28571ZM8.57147 5.99999C9.99112 5.99999 11.1429 7.15177 11.1429 8.57142C11.1429 9.99107 9.99112 11.1428 8.57147 11.1428C7.15183 11.1428 6.00005 9.99107 6.00005 8.57142C6.00005 7.15177 7.15183 5.99999 8.57147 5.99999Z" fill="#CFD6DC"/>
                 </svg>
                 <span>Adresse</span>
               </a>
-            </li> -->
+            </li>
           </ul>
         </nav>
 
         <div class="card bg-primary p-6 rounded-20p overflow-hidden mt-9 min-h-52 h-full lg:hidden relative">
           <h2 class="text-2xl font-medium max-w-60 text-white mb-1">Obtenez notre offre de bienvenue</h2>
           <p class="text-base max-w-60 text-white">Lorem ipsum dolor sit amet, consectetur adipiscing.</p>
-          <img class="w-32 absolute bottom-0 right-0" src="img/coffee.png" alt="coffee">
+          <img class="w-32 absolute bottom-0 right-0" src="../../img/coffee.png" alt="coffee">
         </div>
 
         <div class="hero relative mt-12 hidden lg:block" id="#le-restaurant">
           <div class="absolute top-0 left-0 rounded-xl flex items-center justify-center w-full h-full bg-black/35">
               <h1 class="max-w-96 text-center text-5xl leading-normal font-semibold text-white"> Le Restaurant L’Expérience</h1>
           </div>
-          <img class="img-cover rounded-xl w-full rounded-xl overflow-hidden" src="img/hero.png" alt="Hero">
+          <img class="img-cover rounded-xl w-full rounded-xl overflow-hidden" src="../../img/hero.png" alt="Hero">
         </div>
       </div>
     </main>
@@ -121,8 +118,8 @@
 
         <div class="grid grid-cols-1 gap-2 mt-8 lg:grid-cols-3 lg:gap-8 lg:grid">
           <div class="product flex flex-row-reverse lg:grid pb-2 border-b-2 border-solid border-gray lg:border-0" data-type="hot">
-            <img class="img-cover product-img rounded-lg overflow-hidden aspect-square max-w-24 lg:max-w-full lg:aspect-square" src="img/cafe.png" alt="coffee">
-            <div class="h-fit">
+            <img class="img-cover product-img rounded-lg overflow-hidden aspect-square max-w-24 lg:max-w-full lg:aspect-auto" src="../../img/cafe.png" alt="coffee">
+            <div>
               <div class="flex items-center justify-between lg:mt-5">
                 <p class="product-title text-lg font-medium">Expresso Italien</p>
                 <div class="product-label">
@@ -142,8 +139,8 @@
           </div>
 
           <div class="product flex flex-row-reverse lg:grid pb-2 border-b-2 border-solid border-gray lg:border-0" data-type="cold">
-            <img class="img-cover product-img rounded-lg overflow-hidden aspect-square max-w-24 lg:max-w-full lg:aspect-square" src="img/cafe.png" alt="coffee">
-            <div class="h-fit">
+            <img class="img-cover product-img rounded-lg overflow-hidden aspect-square max-w-24 lg:max-w-full lg:aspect-auto" src="../../img/cafe.png" alt="coffee">
+            <div>
               <div class="flex items-center justify-between lg:mt-5">
                 <p class="product-title text-lg font-medium">Expresso Français</p>
                 <div class="product-label">
@@ -163,8 +160,8 @@
           </div>
 
           <div class="product flex flex-row-reverse lg:grid pb-2 border-b-2 border-solid border-gray lg:border-0" data-type="hot">
-            <img class="img-cover product-img rounded-lg overflow-hidden aspect-square max-w-24 lg:max-w-full lg:aspect-square" src="img/banner.png" alt="coffee">
-            <div class="h-fit">
+            <img class="img-cover product-img rounded-lg overflow-hidden aspect-square max-w-24 lg:max-w-full lg:aspect-auto" src="../../img/banner.png" alt="coffee">
+            <div>
               <div class="flex items-center justify-between lg:mt-5">
                 <p class="product-title text-lg font-medium">Expresso Anglais</p>
                 <div class="product-label">
@@ -197,7 +194,7 @@
 
             <div class="flex justify-end"><a class="p-3 bg-white text-primary font-semibold text-base transition-all ease-in-out duration-500 lg:px-5 lg:py-3 hover:opacity-75 rounded-full" href="tel:+">S’inscrire</a></div>
           </div>
-          <div class="h-full lg:w-7/12"><img class="img-cover" src="img/banner.png"></div>
+          <div class="h-full lg:w-7/12"><img class="img-cover" src="../../img/banner.png"></div>
         </div>
       </div>
     </div>
@@ -220,7 +217,7 @@
               <p>Nullam facilisis tellus at ipsum fringilla imperdiet. Nam convallis augue augue, eu sollicitudin ante faucibus vel.</p>
             </div>
           </div>
-          <figure class="about__content_media"> <img class="about__content__media__image" src="img/about.png"></figure>
+          <figure class="about__content_media"> <img class="about__content__media__image" src="../../img/about.png"></figure>
         </div>
       </section>
     </div>
@@ -243,7 +240,7 @@
           </div>
         </div>
         <div class="absolute top-0 left-0 rounded-xl flex items-center justify-center w-full h-full bg-black/15"></div>
-        <img class="banner img-cover rounded-xl w-full" src="img/horaire.png" alt="Hero">
+        <img class="banner img-cover rounded-xl w-full" src="../../img/horaire.png" alt="Hero">
       </div>
     </div> 
     
@@ -254,7 +251,7 @@
             <path d="M6 18L18 6M6 6L18 18" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
           </svg>
         </div>
-        <img class="product-img img h-56 w-full img-cover h-full" src="img/cafe.png" alt="coffee">
+        <img class="product-img img h-56 w-full img-cover h-full" src="../../img/cafe.png" alt="coffee">
         <div class="w-container mx-auto">
           <div class="flex items-center justify-between mt-5">
             <p class="product-title text-lg font-medium">Expresso Italien</p>
@@ -293,6 +290,6 @@
         </div>
       </div>
     </footer>
-    <script src="./js/animate.js"></script>
+    <script src="../../js/animate.js"></script>
   </body>
 </html>
